@@ -13,8 +13,11 @@ Date: 1/2/26
     - Fixed the game crashing upon destroying your car and a biter/spawner spawner in the same collision.
     - Fixed that disconnecting from a server (losing connection, being kicked, force-quitting, etc.) was teleporting you to your remote view location upon rejoining.
     - Fixed that the claim hexes tool wasn't taking coins from the piggy bank when in remote view.
+    - Fixed that sometimes a hex core's GUI wouldn't update when one of its trades is made.
   Modding:
     - Added remote interfaces.
+  Optimizations:
+    - Optimized overall trading performance. The improvement is proportional to the number of players online at once.
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.10
 Date: 25/1/26
